--- a/aJSlinux/root-riscv64.cfg
+++ b/aJSlinux/root-riscv64.cfg
@@ -3,7 +3,7 @@
     version: 1,
     machine: "riscv64",
     memory_size: 256,
-    bios: "bbl64.bin",
+    bios: "c/bbl.bin",
     kernel: "kernel-riscv64.bin",
     cmdline: "console=hvc0 root=/dev/vda rw",
     drive0: { file: "b/rootfs.ext2" },
